인원 확보->레벨 로드 방식으로 변경

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Assets\Scripts\ChatController.cs" />
     <Compile Include="Assets\Scripts\ChatSyncPort.cs" />
     <Compile Include="Assets\Scripts\GameController.cs" />
+    <Compile Include="Assets\Scripts\Global.cs" />
     <Compile Include="Assets\Scripts\Launcher.cs" />
     <Compile Include="Assets\Scripts\Lobby.cs" />
     <Compile Include="Assets\Scripts\MoveButton.cs" />
