In-Room 경로와 Room-to-Room 경로 상호 전환까지 완료

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Assets\Scripts\Character\Item\ItemPopUp.cs" />
     <Compile Include="Assets\Scripts\Character\MapData.cs" />
     <Compile Include="Assets\Scripts\Character\NPC\NPCController.cs" />
+    <Compile Include="Assets\Scripts\Character\NPC\Path.cs" />
     <Compile Include="Assets\Scripts\Character\NPC\PathNode.cs" />
     <Compile Include="Assets\Scripts\Character\Player\CameraWork.cs" />
     <Compile Include="Assets\Scripts\Character\Player\PlayerController.cs" />
